--- a/2.2/Dockerfile
+++ b/2.2/Dockerfile
@@ -41,6 +41,8 @@ RUN mkdir -p /var/lib/cassandra "$CASSANDRA_CONFIG" \
 	&& chmod 777 /var/lib/cassandra "$CASSANDRA_CONFIG"
 VOLUME /var/lib/cassandra
 
+USER cassandra
+
 # 7000: intra-node communication
 # 7001: TLS intra-node communication
 # 7199: JMX
